--- a/assets/scss/header/_header-logo.scss
+++ b/assets/scss/header/_header-logo.scss
@@ -16,7 +16,7 @@
     margin-right: 4px;
     padding: 14px 1px 13px 5px;
 
-    border: 3px solid $color-highligh;
+    border: 3px solid $color-highlight;
   }
 }
 
